--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "pug": "^3.0.2",
     "socket.io": "^4.4.0",
+    "localtunnel": "^2.0.1",
     "ws": "^8.2.3"
   }
 }
